# ndarray

./: CMakeLists.txt  NDArrayConfig.cmake.in  README.md
include/: ndarray.hpp  nparray.hpp
src/: nparray.cpp  npy.cpp  npy.hpp
