cmake_minimum_required(VERSION 3.9)
project(nparray CXX)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

if(MSVC)
  set(CMAKE_CXX_FLAGS_DEBUG "/DEBUG")
  set(CMAKE_CXX_FLAGS_RELEASE "/O2")
elseif(Clang)
  set(CMAKE_CXX_FLAGS "-W -Wall -Weffc++ -Wextra")
  set(CMAKE_CXX_FLAGS_DEBUG "-g -O2")
  set(CMAKE_CXX_FLAGS_RELEASE "-O3")
elseif(GNU)
  set(CMAKE_CXX_FLAGS "-W -Wall -Weffc++ -Wextra")
  set(CMAKE_CXX_FLAGS_DEBUG "-g -O2")
  set(CMAKE_CXX_FLAGS_RELEASE "-O3")
endif()

include_directories(include)

add_library(nparray STATIC src/npy.cpp src/nparray.cpp)
